--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" type="text/css" href="css/jquery.datetimepicker.min.css">
   <link rel="stylesheet" type="text/css" href="css/select2.css">
-
+  <link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
   <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
   <script type="text/javascript" src="js/volations.js"></script>
 </head>
@@ -96,7 +96,7 @@
 </div>
     <div class="animated fadeinDown" id="content_block">Загрузочный блок</div>
   </div>
-
+<script src="js/lightbox.min.js"></script>
   <script src="js/jquery.datetimepicker.full.js"></script>
   <script>
 $.datetimepicker.setLocale('ru');
