--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" type="text/css" href="css/jquery.datetimepicker.min.css">
   <link rel="stylesheet" type="text/css" href="css/select2.css">
+
   <link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
   <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
   <script type="text/javascript" src="js/volations.js"></script>
@@ -28,6 +29,11 @@
           <li><a href="#" data-page="list" data-type="2"><i class="fa fa-shield fa-fw" aria-hidden="true"></i> Утрата / Хищение</a></li>
           <li><a href="#" data-page="list" data-stat="6"><i class="fa fa-gavel fa-fw" aria-hidden="true"></i> Завершенные</a></li>
         </ul>
+      </div>
+      <div class="bottom_btn">
+        <button class="help"><i class="fa fa-info" aria-hidden="true"></i> Документация</button>
+        <button class="top"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
+
       </div>
     </div>
     <div class="top_block">
